--- a/src/app/components/add-name/add-name.component.html
+++ b/src/app/components/add-name/add-name.component.html
@@ -2,7 +2,7 @@
   <form (submit)="onSubmit()">
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Name:</mat-label>
-      <input matInput type="text" name="name" [(ngModel)]="name" />
+      <input matInput type="text" name="name" [(ngModel)]="nameInput" />
     </mat-form-field>
   </form>
   <button mat-raised-button (click)="onSubmit()">Add</button>
