--- a/src/app/components/add-name/add-name.component.html
+++ b/src/app/components/add-name/add-name.component.html
@@ -1,9 +1,10 @@
-<mat-card>
-  <form (submit)="onSubmit()">
-    <mat-form-field class="example-full-width" appearance="fill">
+<mat-card class="wrapper">
+  <h2>Age Prediction Application</h2>
+  <form class="form" (submit)="onSubmit()">
+    <mat-form-field class="form-field" appearance="fill">
       <mat-label>Name:</mat-label>
       <input matInput type="text" name="name" [(ngModel)]="nameInput" />
     </mat-form-field>
   </form>
-  <button mat-raised-button (click)="onSubmit()">Add</button>
+  <button class="addBtn" mat-raised-button (click)="onSubmit()">Add</button>
 </mat-card>
