--- a/src/app/components/main-component/main-component.component.html
+++ b/src/app/components/main-component/main-component.component.html
@@ -1,5 +1,7 @@
 <app-add-name (newNameEvent)="addNewName($event)"></app-add-name>
-<app-alphabetical-sorted-list
-  [addedNames]="addedNames"
-></app-alphabetical-sorted-list>
-<app-list-sorted-by-age [addedNames]="addedNames"></app-list-sorted-by-age>
+<section>
+  <app-alphabetical-sorted-list
+    [addedNames]="addedNames"
+  ></app-alphabetical-sorted-list>
+  <app-list-sorted-by-age [addedNames]="addedNames"></app-list-sorted-by-age>
+</section>
