List sorting fixed

--- a/src/app/components/main-component/main-component.component.html
+++ b/src/app/components/main-component/main-component.component.html
@@ -1,7 +1,9 @@
 <app-add-name (newNameEvent)="addNewName($event)"></app-add-name>
 <section>
   <app-alphabetical-sorted-list
-    [addedNames]="addedNames"
+    [addedNames]="theListSortedByName"
   ></app-alphabetical-sorted-list>
-  <app-list-sorted-by-age [addedNames]="addedNames"></app-list-sorted-by-age>
+  <app-list-sorted-by-age
+    [addedNames]="theListSortedByAge"
+  ></app-list-sorted-by-age>
 </section>
