--- a/src/app/components/alphabetical-sorted-list/alphabetical-sorted-list.component.html
+++ b/src/app/components/alphabetical-sorted-list/alphabetical-sorted-list.component.html
@@ -1,7 +1,25 @@
 <mat-card class="wrapper">
-  <mat-list class="list" role="list" *ngFor="let x of addedNames">
-    <mat-list-item role="listitem">
-      {{ x.name }} - {{ x.age }} - {{ x.count }}
-    </mat-list-item>
-  </mat-list>
+  <table mat-table [dataSource]="addedNames" class="mat-elevation-z8 table">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let x">{{ x.name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="age">
+      <th mat-header-cell *matHeaderCellDef>Age</th>
+      <td mat-cell *matCellDef="let x">{{ x.age }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="count">
+      <th mat-header-cell *matHeaderCellDef>Count</th>
+      <td mat-cell *matCellDef="let x">{{ x.count }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr
+      class="rows"
+      mat-row
+      *matRowDef="let row; columns: columnsToDisplay"
+    ></tr>
+  </table>
 </mat-card>
