--- a/src/app/components/list-sorted-by-age/list-sorted-by-age.component.scss
+++ b/src/app/components/list-sorted-by-age/list-sorted-by-age.component.scss
@@ -1,5 +1,24 @@
-mat-card{
-    background-color: rgb(126, 169, 170);
-    min-height: 70vh;
+.wrapper{
+    min-height: 65vh;
     padding: 0;
+    margin: 4px;
+    .table{
+        width: 100%;
+    }
+    .mat-column-name {
+        text-transform: capitalize;
+    }
+    .mat-column-age, .mat-column-count{
+        text-align: center;
+        width: 100px;
+    }
+    .rows:nth-child(1){
+        background-color: #C9B037;
+    }
+    .rows:nth-child(2) {
+        background-color: #D7D7D7;
+    }
+    .rows:nth-child(3) {
+        background-color: #6A3805;
+    }
 }
