error handling added, style update

--- a/src/app/components/list-sorted-by-age/list-sorted-by-age.component.html
+++ b/src/app/components/list-sorted-by-age/list-sorted-by-age.component.html
@@ -1,4 +1,5 @@
 <mat-card class="wrapper">
+  <p>Table sorted by age</p>
   <table mat-table [dataSource]="addedNames" class="mat-elevation-z8 table">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
