--- a/src/app/components/list-sorted-by-age/list-sorted-by-age.component.scss
+++ b/src/app/components/list-sorted-by-age/list-sorted-by-age.component.scss
@@ -2,6 +2,9 @@
     min-height: 65vh;
     padding: 0;
     margin: 4px;
+    p{
+        text-align: center;
+    }
     .table{
         width: 100%;
     }
