--- a/src/app/components/alphabetical-sorted-list/alphabetical-sorted-list.component.html
+++ b/src/app/components/alphabetical-sorted-list/alphabetical-sorted-list.component.html
@@ -1,4 +1,5 @@
 <mat-card class="wrapper">
+  <p>Table sorted by name</p>
   <table mat-table [dataSource]="addedNames" class="mat-elevation-z8 table">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
