Duplicate names handled.

--- a/src/app/components/main-component/main-component.component.html
+++ b/src/app/components/main-component/main-component.component.html
@@ -1,4 +1,7 @@
-<app-add-name (newNameEvent)="addNewName($event)"></app-add-name>
+<app-add-name
+  [allNames]="addedNames"
+  (newNameEvent)="addNewName($event)"
+></app-add-name>
 <section>
   <app-alphabetical-sorted-list
     [addedNames]="theListSortedByName"
